# bitontree-testbuilder

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 95902b6a277d_initial_schema.py  b72d31e4c6a9_add_candidate_student_id_cgpa.py  c84f19a27d10_add_assessment_window.py
backend/src/testbuilder/: __init__.py  config.py  db.py  main.py  security.py  seed.py  storage.py
backend/src/testbuilder/api/: deps.py
backend/src/testbuilder/api/routes/: admin_users.py  assessments.py  assignments.py  audit.py  auth.py  candidate_auth.py  code.py  evaluations.py  exam.py  proctoring.py  questions.py  reports.py  (+1 more)
backend/src/testbuilder/judge/: client.py
backend/src/testbuilder/models/: __init__.py  assessments.py  base.py  candidates.py  coding.py  emails.py  evaluation.py  exam.py  identity.py  proctoring.py  questions.py
backend/src/testbuilder/services/: ai.py  audit.py  credentials.py  emailer.py  harness.py  importer.py  quality.py  ratelimit.py  scoring.py  sessions.py  tokens.py  versioning.py
backend/tests/: conftest.py
backend/tests/contract/: test_assessments.py  test_assignments.py  test_audit.py  test_auth.py  test_candidate_auth.py  test_code.py  test_code_harness.py  test_proctoring.py  test_question_import.py  test_questions.py  test_unified_login.py
backend/tests/integration/: test_exam_flow.py  test_timers.py
backend/tests/unit/: test_ai.py  test_harness.py  test_importer.py  test_quality.py  test_ratelimit.py  test_scoring.py  test_security.py  test_storage.py
(+50 files in other folders)
