[project]
name = "testbuilder-backend"
version = "0.1.0"
description = "TestBuilder online assessment platform - backend API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "structlog>=24.1",
    "tzdata>=2024.1",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
redis = ["redis>=5.0", "arq>=0.26"]
s3 = ["boto3>=1.34"]
ai = ["google-genai>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "fakeredis>=2.23",
    "time-machine>=2.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testbuilder"]
